--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+@use "fonts";
+@use "margins";
+:root {
+  --dark-color: #000000;
+  --ligth-color: #000000;
+  --primary-color: #ffff;
+  --gray-color: #5F46D;
+  --dark-hover-color: #161616;
+}
