--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -1,9 +1,7 @@
-<div class="v"><h2>Расписание</h2></div>
 <div class="list_wrapper_duo">
   <label class="g">
     <tui-combo-box [formControl]="control" [stringify]="stringify">
       Специальность
-
       <tui-data-list-wrapper
         *tuiDataList
         [items]="items | tuiFilterByInput"
@@ -11,31 +9,34 @@
       />
     </tui-combo-box>
   </label>
+
   <label>
     <tui-combo-box [formControl]="control2" [stringify]="stringify2">
       Группа
-
       <tui-data-list-wrapper
         *tuiDataList
-        [itemContent]="stringify2 | tuiStringifyContent"
         [items]="availableGroups | tuiFilterByInput"
+        [itemContent]="stringify2 | tuiStringifyContent"
       />
     </tui-combo-box>
   </label>
 </div>
 
 <div class="main_content">
-  <div
-    *ngIf="!isGroupSelected()"
-    tuiAppearance="floating"
-    tuiCardLarge
-    class="noselected"
-  >
-    Пожалуйста, выберите группу, чтобы увидеть расписание.
-  </div>
-
-  <!-- Расписание -->
-  <div *ngIf="isGroupSelected()">
+  <ng-container *ngIf="control2.value; else emptyState">
     <app-calendar [schedule]="filteredSchedule"></app-calendar>
-  </div>
+  </ng-container>
+
+  <ng-template #emptyState>
+    <tui-block-status>
+      <img
+        alt="not found"
+        src=".\assets\images\not-found.svg"
+        tuiSlot="top"
+        class="image"
+      />
+      <h4>Не выбрано</h4>
+      Выберите специальность и группу
+    </tui-block-status>
+  </ng-template>
 </div>
