--- a/src/app/components/board/board.component.scss
+++ b/src/app/components/board/board.component.scss
@@ -1,7 +1,8 @@
 :host {
   display: block;
   padding: 20px 12px;
-  width: 100%;
+  background-color: #f9fafb;
+  min-height: 69vh;
 }
 
 .list_wrapper_duo {
@@ -9,7 +10,6 @@
   display: flex;
   gap: 30px;
   margin-bottom: 10px;
-  border-bottom: 1px solid #d1d5d8;
 }
 
 label {
@@ -28,6 +28,7 @@ tui-combo-box {
   margin-top: 10px;
   display: flex;
   justify-content: center;
+
   .noselected {
     display: flex;
     align-items: center !important;
