--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,4 @@
-@use "fonts";
-@use "margins";
 :root {
-  --dark-color: #000000;
-  --ligth-color: #000000;
-  --primary-color: #ffff;
-  --gray-color: #5F46D;
-  --dark-hover-color: #161616;
+  --main-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif;
 }
