Добавление функционала закрепления групп в компоненте доски и улучшение макета. Обновлены стили для управления группами и добавлены кнопки для навигации по закрепленным группам. Также добавлен новый текстовый элемент в административной панели.

--- a/src/app/components/admin-panel/admin-panel.component.html
+++ b/src/app/components/admin-panel/admin-panel.component.html
@@ -69,6 +69,7 @@
                 [stringify]="stringify"
                 [(ngModel)]="editing.group"
               >
+                Группа
                 <tui-data-list-wrapper
                   *tuiDataList
                   [items]="groups | tuiFilterByInput"
