Улучшение компонента календаря: добавлена логика для динамического определения цвета карточек предметов, обновлены стили для карточек и таблиц, улучшен внешний вид мобильной версии календаря с новыми стилями и адаптивными элементами.

--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -32,7 +32,12 @@
             *ngIf="getSubjectByDayAndTime(day, time) as subject; else emptyCell"
           >
             <div class="card-container">
-              <div tuiAppearance="floating" tuiCardLarge class="subject-card">
+              <div
+                tuiAppearance="floating"
+                tuiCardLarge
+                class="subject-card"
+                [ngClass]="getSubjectCardColor(subject.subject)"
+              >
                 <header tuiHeader class="card-header">
                   <h1 tuiTitle class="card-title">
                     <span class="subject-name">{{ subject.subject }}</span>
