Обновление компонента мобильного календаря: добавлена логика для динамического определения цвета карточек предметов, улучшены стили карточек с новыми цветовыми вариациями, оптимизирован вывод информации о предмете и преподавателе.

--- a/src/app/components/mobile-calendar/mobile-calendar.component.html
+++ b/src/app/components/mobile-calendar/mobile-calendar.component.html
@@ -28,16 +28,19 @@
       </div>
 
       <div class="lesson-content">
-        <ng-container *ngIf="getSubjectForTime(time); else emptyLesson">
-          <div tuiAppearance="floating" tuiCardLarge class="lesson-card">
+        <ng-container
+          *ngIf="getSubjectForTime(time) as subject; else emptyLesson"
+        >
+          <div
+            tuiAppearance="floating"
+            tuiCardLarge
+            class="lesson-card"
+            [ngClass]="getSubjectCardColor(subject.subject)"
+          >
             <header tuiHeader class="lesson-header">
               <h3 class="lesson-title">
-                <span class="subject-name">{{
-                  getSubjectForTime(time)?.subject
-                }}</span>
-                <span class="teacher-name">{{
-                  getSubjectForTime(time)?.teacher
-                }}</span>
+                <span class="subject-name">{{ subject.subject }}</span>
+                <span class="teacher-name">{{ subject.teacher }}</span>
               </h3>
             </header>
           </div>
