Добавление компонента WeekIndicator и интеграция его в календарь: обновлены импорты в app.component.ts и calendar.component.ts, а также добавлен новый элемент в шаблон calendar.component.html. Расширен функционал ScheduleService для управления расписанием с использованием BehaviorSubject.

--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -1,5 +1,6 @@
 <!-- Десктопная версия -->
 <div class="desktop-version" *ngIf="!isMobile">
+  <app-week-indicator></app-week-indicator>
   <table tuiTable class="schedule-table">
     <thead>
       <tr>
