--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -16,7 +16,7 @@
   </button>
   <button
     class="nav_bar_button"
-    routerLink="/actor"
+    routerLink="/teacher-schedule"
     routerLinkActive="active"
     [routerLinkActiveOptions]="{ exact: true }"
   >
