--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,8 +1,18 @@
 <div class="sidebar_container">
-  <h1 tuiTitle="m" tuiTatle>КНГК Расписание</h1>
-  <span class="sidebar_container_description"
-    >Доступ к расписанию занятий и информации об учителях в одном месте</span
-  >
+  <div class="logo-container">
+    <img
+      src="assets/images/logo.svg"
+      alt="КНГК Умное Расписание"
+      class="logo"
+    />
+    <div class="title-container">
+      <h1 tuiTitle="m" tuiTatle>КНГК Умное Расписание</h1>
+      <span class="sidebar_container_description"
+        >Доступ к расписанию занятий и информации об учителях в одном
+        месте</span
+      >
+    </div>
+  </div>
 </div>
 
 <nav class="nav_bar">
